Fixes click on arrow image not performing expanding/collapsing
- Also fixes comment on toggleCollapse function

--- a/css/hud.css
+++ b/css/hud.css
@@ -158,6 +158,9 @@ input[type=number] {
     -o-transform: rotate(90deg);
 }
 
+/* So that img won't take away from clicks on .collapser */
+.collapser img { pointer-events: none; }
+
 /* ==========================================================================
    Skin
    ========================================================================== */
